# flooks

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  package-lock.json  package.json  tsconfig.base.json
.github/: copilot-instructions.md
apps/api/: .env.example  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 20260524_0001_bootstrap_metadata_tables.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/: router.py
apps/api/app/api/routes/: dashboards.py  health.py  identity.py  metadata.py  overview.py  query.py  reference.py  system.py
apps/api/app/core/: config.py
apps/api/app/db/: __init__.py  base.py  models.py  session.py
apps/api/app/domain/: dashboard.py  enums.py  identity.py  persistence.py  query.py  reference.py
apps/api/app/query/: __init__.py  access.py  connector.py  dev_seed.py  exceptions.py  registry.py  translator.py  validator.py
apps/api/tests/: test_dashboards.py  test_identity.py  test_query.py  test_system.py
apps/web/: Dockerfile  index.html  package.json
apps/web/src/: App.tsx  styles.css
deploy/compose/: docker-compose.dev.yml
docs-ko/: README.md
docs-ko/architecture/: api-reference.md  overview.md  platform-dossier.md  query-spec.md
docs/adr/: 0001-platform-baseline.md
docs/architecture/: ai-harness.md  api-reference.md  domain-model.md  overview.md  panel-sdk.md  platform-dossier.md  query-spec.md
docs/playbooks/: adding-connector.md  adding-harness-pack.md  adding-panel.md  work-log.md
